README: Basic Compile and Test